--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>React App</title>
-</head>
-
-<body>
-  <div id="root">
-  <script src="main.js"></script>
-</body>
-
+<html>
+  <head>
+    <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAADElEQVQI12P4//8/AAX+Av7czFnnAAAAAElFTkSuQmCC">
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
